src/parser.output
Nonterminals useless in grammar

    typedef_declaration
    init_declarator_list
    struct_or_union_specifier
    struct_or_union
    struct_declaration_list
    struct_declaration
    specifier_qualifier_list
    struct_declarator_list
    struct_declarator
    type_name


Terminals unused in grammar

    STRING_LITERAL
    TYPE_NAME
    EXTERN
    STATIC
    AUTO
    REGISTER
    STRUCT
    UNION
    ELLIPSIS
    uminu


Rules useless in grammar

  184 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  185                          | struct_or_union '{' struct_declaration_list '}'
  186                          | struct_or_union IDENTIFIER

  187 struct_or_union: STRUCT
  188                | UNION

  189 struct_declaration_list: struct_declaration
  190                        | struct_declaration_list struct_declaration

  191 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  192 specifier_qualifier_list: type_specifier specifier_qualifier_list
  193                         | type_specifier
  194                         | type_qualifier specifier_qualifier_list
  195                         | type_qualifier

  196 struct_declarator_list: struct_declarator
  197                       | struct_declarator_list ',' struct_declarator

  198 struct_declarator: declarator
  199                  | ':' constant_expression
  200                  | declarator ':' constant_expression

  201 type_name: specifier_qualifier_list
  202          | specifier_qualifier_list abstract_declarator
  203          | type_specifier


Rules useless in parser due to conflicts

  108 unary_operator: '~'
  109               | '!'


State 1 conflicts: 3 shift/reduce
State 3 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 23 conflicts: 9 shift/reduce
State 28 conflicts: 9 shift/reduce
State 44 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 74 conflicts: 10 shift/reduce
State 77 conflicts: 13 shift/reduce
State 78 conflicts: 13 shift/reduce
State 161 conflicts: 2 shift/reduce
State 193 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement
    7                    | declaration_specifiers declarator ';'
    8                    | enum_specifier ';'
    9                    | TYPEDEF declaration_specifiers IDENTIFIER ';'
   10                    | declarator

   11 declarator: pointer direct_declarator
   12           | direct_declarator

   13 direct_declarator: IDENTIFIER
   14                  | '(' declarator ')'
   15                  | direct_declarator '[' constant_expression ']'
   16                  | direct_declarator '(' parameter_list ')'
   17                  | direct_declarator '(' identifier_list ')'
   18                  | direct_declarator '(' ')'

   19 parameter_list: parameter_declaration
   20               | parameter_list ',' parameter_declaration

   21 parameter_declaration: declaration_specifiers declarator
   22                      | declaration_specifiers abstract_declarator
   23                      | IDENTIFIER declarator

   24 constant_expression: conditional_expression

   25 declaration: declaration_specifiers ';'
   26            | declaration_specifiers init_declarator ';'
   27            | IDENTIFIER declarator ';'

   28 declaration_specifiers: type_specifier
   29                       | type_specifier declaration_specifiers
   30                       | TYPEDEF
   31                       | TYPEDEF declaration_specifiers type_specifier

   32 init_declarator: declarator
   33                | declarator '=' initializer
   34                | direct_declarator '[' ']' '=' '{' initializer_list '}'
   35                | direct_declarator '[' ']' '=' '{' initializer_list ',' '}'

   36 initializer: assignment_expression

   37 initializer_list: initializer
   38                 | initializer_list ',' initializer

   39 abstract_declarator: pointer
   40                    | direct_abstract_declarator
   41                    | pointer direct_abstract_declarator

   42 direct_abstract_declarator: '(' abstract_declarator ')'
   43                           | '[' ']'
   44                           | '[' constant_expression ']'
   45                           | direct_abstract_declarator '[' constant_expression ']'
   46                           | '(' ')'
   47                           | '(' parameter_list ')'
   48                           | direct_abstract_declarator '(' ')'
   49                           | direct_abstract_declarator '(' parameter_list ')'

   50 compound_statement: '{' '}'
   51                   | '{' declaration_list '}'
   52                   | '{' statement_list '}'
   53                   | '{' declaration_list statement_list '}'

   54 declaration_list: declaration
   55                 | declaration_list declaration

   56 statement_list: statement
   57               | statement_list statement

   58 statement: labeled_statement
   59          | expression_statement
   60          | selection_statement
   61          | iteration_statement
   62          | jump_statement
   63          | compound_statement

   64 labeled_statement: IDENTIFIER ':' statement
   65                  | CASE constant_expression ':' statement
   66                  | DEFAULT ':' statement

   67 expression_statement: ';'
   68                     | expression ';'

   69 selection_statement: IF '(' expression ')' statement
   70                    | IF '(' expression ')' statement ELSE statement
   71                    | SWITCH '(' expression ')' compound_statement

   72 iteration_statement: WHILE '(' expression ')' statement
   73                    | DO statement WHILE '(' expression ')' ';'
   74                    | FOR '(' expression_statement expression_statement ')' statement
   75                    | FOR '(' expression_statement expression_statement expression ')' statement

   76 jump_statement: GOTO IDENTIFIER ';'
   77               | CONTINUE ';'
   78               | BREAK ';'
   79               | RETURN ';'
   80               | RETURN expression ';'

   81 primary_expression: IDENTIFIER
   82                   | INT_LITERAL
   83                   | CHAR_LITERAL
   84                   | '(' expression ')'

   85 postfix_expression: primary_expression
   86                   | postfix_expression '[' expression ']'
   87                   | postfix_expression '(' ')'
   88                   | postfix_expression '(' argument_expression_list ')'
   89                   | postfix_expression '.' IDENTIFIER
   90                   | postfix_expression POINTER_OP IDENTIFIER
   91                   | postfix_expression INCREMENT_OP
   92                   | postfix_expression DECREMENT_OP

   93 argument_expression_list: assignment_expression
   94                         | argument_expression_list ',' assignment_expression

   95 unary_expression: postfix_expression
   96                 | INCREMENT_OP unary_expression
   97                 | DECREMENT_OP unary_expression
   98                 | unary_operator cast_expression
   99                 | '-' unary_expression
  100                 | '!' unary_expression
  101                 | '~' unary_expression
  102                 | SIZEOF unary_expression
  103                 | SIZEOF '(' declaration_specifiers ')'

  104 unary_operator: '&'
  105               | '*'
  106               | '+'
  107               | '-'
  108               | '~'
  109               | '!'

  110 cast_expression: unary_expression
  111                | '(' type_specifier ')' cast_expression

  112 multiplicative_expression: cast_expression
  113                          | multiplicative_expression '*' cast_expression
  114                          | multiplicative_expression '/' cast_expression
  115                          | multiplicative_expression '%' cast_expression

  116 additive_expression: multiplicative_expression
  117                    | additive_expression '+' multiplicative_expression
  118                    | additive_expression '-' multiplicative_expression

  119 shift_expression: additive_expression
  120                 | shift_expression LEFTSHIFT_OP additive_expression
  121                 | shift_expression RIGHTSHIFT_OP additive_expression

  122 relational_expression: shift_expression
  123                      | relational_expression '<' shift_expression
  124                      | relational_expression '>' shift_expression
  125                      | relational_expression LE_OP shift_expression
  126                      | relational_expression GE_OP shift_expression

  127 equality_expression: relational_expression
  128                    | equality_expression EQ_OP relational_expression
  129                    | equality_expression NE_OP relational_expression

  130 and_expression: equality_expression
  131               | and_expression '&' equality_expression

  132 exclusive_or_expression: and_expression
  133                        | exclusive_or_expression '^' and_expression

  134 inclusive_or_expression: exclusive_or_expression
  135                        | inclusive_or_expression '|' exclusive_or_expression

  136 logical_and_expression: inclusive_or_expression
  137                       | logical_and_expression AND_OP inclusive_or_expression

  138 logical_or_expression: logical_and_expression
  139                      | logical_or_expression OR_OP logical_and_expression

  140 conditional_expression: logical_or_expression
  141                       | logical_or_expression '?' expression ':' conditional_expression

  142 assignment_expression: conditional_expression
  143                      | unary_expression assignment_operator assignment_expression

  144 assignment_operator: '='
  145                    | MUL_ASSIGN
  146                    | DIV_ASSIGN
  147                    | MOD_ASSIGN
  148                    | ADD_ASSIGN
  149                    | SUB_ASSIGN
  150                    | LEFTSHIFT_ASSIGN
  151                    | RIGHTSHIFT_ASSIGN
  152                    | AND_ASSIGN
  153                    | XOR_ASSIGN
  154                    | OR_ASSIGN

  155 expression: assignment_expression
  156           | expression ',' assignment_expression

  157 type_specifier: VOID
  158               | CHAR
  159               | SHORT
  160               | INT
  161               | LONG
  162               | FLOAT
  163               | DOUBLE
  164               | SIGNED
  165               | UNSIGNED
  166               | CHAR '*'

  167 enum_specifier: ENUM '{' enumerator_list '}'
  168               | ENUM IDENTIFIER '{' enumerator_list '}'
  169               | ENUM IDENTIFIER

  170 enumerator_list: enumerator
  171                | enumerator_list ',' enumerator

  172 enumerator: IDENTIFIER
  173           | IDENTIFIER '=' constant_expression

  174 type_qualifier: CONST
  175               | VOLATILE

  176 pointer: '*'
  177        | '*' type_qualifier_list
  178        | '*' pointer
  179        | '*' type_qualifier_list pointer

  180 type_qualifier_list: type_qualifier
  181                    | type_qualifier_list type_qualifier

  182 identifier_list: IDENTIFIER
  183                | identifier_list ',' IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 100 109
    '%' (37) 115
    '&' (38) 104 131
    '(' (40) 14 16 17 18 42 46 47 48 49 69 70 71 72 73 74 75 84 87 88 103 111
    ')' (41) 14 16 17 18 42 46 47 48 49 69 70 71 72 73 74 75 84 87 88 103 111
    '*' (42) 105 113 166 176 177 178 179
    '+' (43) 106 117
    ',' (44) 20 35 38 94 156 171 183
    '-' (45) 99 107 118
    '.' (46) 89
    '/' (47) 114
    ':' (58) 64 65 66 141
    ';' (59) 7 8 9 25 26 27 67 68 73 76 77 78 79 80
    '<' (60) 123
    '=' (61) 33 34 35 144 173
    '>' (62) 124
    '?' (63) 141
    '[' (91) 15 34 35 43 44 45 86
    ']' (93) 15 34 35 43 44 45 86
    '^' (94) 133
    '{' (123) 34 35 50 51 52 53 167 168
    '|' (124) 135
    '}' (125) 34 35 50 51 52 53 167 168
    '~' (126) 101 108
    error (256)
    IDENTIFIER <string> (258) 9 13 23 27 64 76 81 89 90 168 169 172 173 182 183
    INT_LITERAL <integer> (259) 82
    CHAR_LITERAL <string> (260) 83
    SIZEOF (261) 102 103
    STRING_LITERAL (262)
    POINTER_OP (263) 90
    INCREMENT_OP (264) 91 96
    DECREMENT_OP (265) 92 97
    LEFTSHIFT_OP (266) 120
    RIGHTSHIFT_OP (267) 121
    LE_OP (268) 125
    GE_OP (269) 126
    EQ_OP (270) 128
    NE_OP (271) 129
    AND_OP (272) 137
    OR_OP (273) 139
    MUL_ASSIGN (274) 145
    DIV_ASSIGN (275) 146
    MOD_ASSIGN (276) 147
    ADD_ASSIGN (277) 148
    SUB_ASSIGN (278) 149
    LEFTSHIFT_ASSIGN (279) 150
    RIGHTSHIFT_ASSIGN (280) 151
    AND_ASSIGN (281) 152
    XOR_ASSIGN (282) 153
    OR_ASSIGN (283) 154
    TYPE_NAME (284)
    TYPEDEF (285) 9 30 31
    EXTERN (286)
    STATIC (287)
    AUTO (288)
    REGISTER (289)
    CHAR (290) 158 166
    SHORT (291) 159
    INT (292) 160
    LONG (293) 161
    SIGNED (294) 164
    UNSIGNED (295) 165
    FLOAT (296) 162
    DOUBLE (297) 163
    CONST (298) 174
    VOLATILE (299) 175
    VOID (300) 157
    STRUCT (301)
    UNION (302)
    ENUM (303) 167 168 169
    ELLIPSIS (304)
    CASE (305) 65
    DEFAULT (306) 66
    IF (307) 69 70
    ELSE (308) 70
    SWITCH (309) 71
    WHILE (310) 72 73
    DO (311) 73
    FOR (312) 74 75
    GOTO (313) 76
    CONTINUE (314) 77
    BREAK (315) 78
    RETURN (316) 79 80
    uminu (317)
    NOELSE (318)


Nonterminals, with rules where they appear

    $accept (88)
        on left: 0
    ROOT (89)
        on left: 1
        on right: 0
    translation_unit <expressionList> (90)
        on left: 2 3
        on right: 1 3
    external_declaration <expr> (91)
        on left: 4 5
        on right: 2 3
    function_definition <expr> (92)
        on left: 6 7 8 9 10
        on right: 4
    declarator <expr> (93)
        on left: 11 12
        on right: 6 7 10 14 21 23 27 32 33
    direct_declarator <expr> (94)
        on left: 13 14 15 16 17 18
        on right: 11 12 15 16 17 18 34 35
    parameter_list <expressionList> (95)
        on left: 19 20
        on right: 16 20 47 49
    parameter_declaration <expr> (96)
        on left: 21 22 23
        on right: 19 20
    constant_expression <expr> (97)
        on left: 24
        on right: 15 44 45 65 173
    declaration <expr> (98)
        on left: 25 26 27
        on right: 5 54 55
    declaration_specifiers <string> (99)
        on left: 28 29 30 31
        on right: 6 7 9 21 22 25 26 29 31 103
    init_declarator <expr> (100)
        on left: 32 33 34 35
        on right: 26
    initializer <expr> (101)
        on left: 36
        on right: 33 37 38
    initializer_list <expressionList> (102)
        on left: 37 38
        on right: 34 35 38
    abstract_declarator <expr> (103)
        on left: 39 40 41
        on right: 22 42
    direct_abstract_declarator <expr> (104)
        on left: 42 43 44 45 46 47 48 49
        on right: 40 41 45 48 49
    compound_statement <expressionList> (105)
        on left: 50 51 52 53
        on right: 6 63 71
    declaration_list <expressionList> (106)
        on left: 54 55
        on right: 51 53 55
    statement_list <expressionList> (107)
        on left: 56 57
        on right: 52 53 57
    statement <expr> (108)
        on left: 58 59 60 61 62 63
        on right: 56 57 64 65 66 69 70 72 73 74 75
    labeled_statement <expr> (109)
        on left: 64 65 66
        on right: 58
    expression_statement <expr> (110)
        on left: 67 68
        on right: 59 74 75
    selection_statement <expr> (111)
        on left: 69 70 71
        on right: 60
    iteration_statement <expr> (112)
        on left: 72 73 74 75
        on right: 61
    jump_statement <expr> (113)
        on left: 76 77 78 79 80
        on right: 62
    primary_expression <expr> (114)
        on left: 81 82 83 84
        on right: 85
    postfix_expression <expr> (115)
        on left: 85 86 87 88 89 90 91 92
        on right: 86 87 88 89 90 91 92 95
    argument_expression_list <expressionList> (116)
        on left: 93 94
        on right: 88 94
    unary_expression <expr> (117)
        on left: 95 96 97 98 99 100 101 102 103
        on right: 96 97 99 100 101 102 110 143
    unary_operator (118)
        on left: 104 105 106 107 108 109
        on right: 98
    cast_expression <expr> (119)
        on left: 110 111
        on right: 98 111 112 113 114 115
    multiplicative_expression <expr> (120)
        on left: 112 113 114 115
        on right: 113 114 115 116 117 118
    additive_expression <expr> (121)
        on left: 116 117 118
        on right: 117 118 119 120 121
    shift_expression <expr> (122)
        on left: 119 120 121
        on right: 120 121 122 123 124 125 126
    relational_expression <expr> (123)
        on left: 122 123 124 125 126
        on right: 123 124 125 126 127 128 129
    equality_expression <expr> (124)
        on left: 127 128 129
        on right: 128 129 130 131
    and_expression <expr> (125)
        on left: 130 131
        on right: 131 132 133
    exclusive_or_expression <expr> (126)
        on left: 132 133
        on right: 133 134 135
    inclusive_or_expression <expr> (127)
        on left: 134 135
        on right: 135 136 137
    logical_and_expression <expr> (128)
        on left: 136 137
        on right: 137 138 139
    logical_or_expression <expr> (129)
        on left: 138 139
        on right: 139 140 141
    conditional_expression <expr> (130)
        on left: 140 141
        on right: 24 141 142
    assignment_expression <expr> (131)
        on left: 142 143
        on right: 36 93 94 143 155 156
    assignment_operator <string> (132)
        on left: 144 145 146 147 148 149 150 151 152 153 154
        on right: 143
    expression <expr> (133)
        on left: 155 156
        on right: 68 69 70 71 72 73 75 80 84 86 141 156
    type_specifier <string> (134)
        on left: 157 158 159 160 161 162 163 164 165 166
        on right: 28 29 31 111
    enum_specifier <expr> (135)
        on left: 167 168 169
        on right: 8
    enumerator_list <expressionList> (136)
        on left: 170 171
        on right: 167 168 171
    enumerator <expr> (137)
        on left: 172 173
        on right: 170 171
    type_qualifier (138)
        on left: 174 175
        on right: 180 181
    pointer <expr> (139)
        on left: 176 177 178 179
        on right: 11 39 41 178 179
    type_qualifier_list (140)
        on left: 180 181
        on right: 177 179 181
    identifier_list <expressionList> (141)
        on left: 182 183
        on right: 17 183


State 0

    0 $accept: • ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    ENUM        shift, and go to state 12
    '*'         shift, and go to state 13
    '('         shift, and go to state 14

    ROOT                    go to state 15
    translation_unit        go to state 16
    external_declaration    go to state 17
    function_definition     go to state 18
    declarator              go to state 19
    direct_declarator       go to state 20
    declaration             go to state 21
    declaration_specifiers  go to state 22
    type_specifier          go to state 23
    enum_specifier          go to state 24
    pointer                 go to state 25


State 1

   13 direct_declarator: IDENTIFIER •
   27 declaration: IDENTIFIER • declarator ';'

    IDENTIFIER  shift, and go to state 26
    '*'         shift, and go to state 13
    '('         shift, and go to state 14

    IDENTIFIER  [reduce using rule 13 (direct_declarator)]
    '*'         [reduce using rule 13 (direct_declarator)]
    '('         [reduce using rule 13 (direct_declarator)]
    $default    reduce using rule 13 (direct_declarator)

    declarator         go to state 27
    direct_declarator  go to state 20
    pointer            go to state 25


State 2

    9 function_definition: TYPEDEF • declaration_specifiers IDENTIFIER ';'
   30 declaration_specifiers: TYPEDEF •
   31                       | TYPEDEF • declaration_specifiers type_specifier

    TYPEDEF   shift, and go to state 28
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    $default  reduce using rule 30 (declaration_specifiers)

    declaration_specifiers  go to state 29
    type_specifier          go to state 23


State 3

  158 type_specifier: CHAR •
  166               | CHAR • '*'

    '*'  shift, and go to state 30

    '*'       [reduce using rule 158 (type_specifier)]
    $default  reduce using rule 158 (type_specifier)


State 4

  159 type_specifier: SHORT •

    $default  reduce using rule 159 (type_specifier)


State 5

  160 type_specifier: INT •

    $default  reduce using rule 160 (type_specifier)


State 6

  161 type_specifier: LONG •

    $default  reduce using rule 161 (type_specifier)


State 7

  164 type_specifier: SIGNED •

    $default  reduce using rule 164 (type_specifier)


State 8

  165 type_specifier: UNSIGNED •

    $default  reduce using rule 165 (type_specifier)


State 9

  162 type_specifier: FLOAT •

    $default  reduce using rule 162 (type_specifier)


State 10

  163 type_specifier: DOUBLE •

    $default  reduce using rule 163 (type_specifier)


State 11

  157 type_specifier: VOID •

    $default  reduce using rule 157 (type_specifier)


State 12

  167 enum_specifier: ENUM • '{' enumerator_list '}'
  168               | ENUM • IDENTIFIER '{' enumerator_list '}'
  169               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 31
    '{'         shift, and go to state 32


State 13

  176 pointer: '*' •
  177        | '*' • type_qualifier_list
  178        | '*' • pointer
  179        | '*' • type_qualifier_list pointer

    CONST     shift, and go to state 33
    VOLATILE  shift, and go to state 34
    '*'       shift, and go to state 13

    $default  reduce using rule 176 (pointer)

    type_qualifier       go to state 35
    pointer              go to state 36
    type_qualifier_list  go to state 37


State 14

   14 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 26
    '*'         shift, and go to state 13
    '('         shift, and go to state 14

    declarator         go to state 38
    direct_declarator  go to state 20
    pointer            go to state 25


State 15

    0 $accept: ROOT • $end

    $end  shift, and go to state 39


State 16

    1 ROOT: translation_unit •
    3 translation_unit: translation_unit • external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    ENUM        shift, and go to state 12
    '*'         shift, and go to state 13
    '('         shift, and go to state 14

    $default  reduce using rule 1 (ROOT)

    external_declaration    go to state 40
    function_definition     go to state 18
    declarator              go to state 19
    direct_declarator       go to state 20
    declaration             go to state 21
    declaration_specifiers  go to state 22
    type_specifier          go to state 23
    enum_specifier          go to state 24
    pointer                 go to state 25


State 17

    2 translation_unit: external_declaration •

    $default  reduce using rule 2 (translation_unit)


State 18

    4 external_declaration: function_definition •

    $default  reduce using rule 4 (external_declaration)


State 19

   10 function_definition: declarator •

    $default  reduce using rule 10 (function_definition)


State 20

   12 declarator: direct_declarator •
   15 direct_declarator: direct_declarator • '[' constant_expression ']'
   16                  | direct_declarator • '(' parameter_list ')'
   17                  | direct_declarator • '(' identifier_list ')'
   18                  | direct_declarator • '(' ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    '('       [reduce using rule 12 (declarator)]
    $default  reduce using rule 12 (declarator)


State 21

    5 external_declaration: declaration •

    $default  reduce using rule 5 (external_declaration)


State 22

    6 function_definition: declaration_specifiers • declarator compound_statement
    7                    | declaration_specifiers • declarator ';'
   25 declaration: declaration_specifiers • ';'
   26            | declaration_specifiers • init_declarator ';'

    IDENTIFIER  shift, and go to state 26
    '*'         shift, and go to state 13
    ';'         shift, and go to state 43
    '('         shift, and go to state 14

    declarator         go to state 44
    direct_declarator  go to state 45
    init_declarator    go to state 46
    pointer            go to state 25


State 23

   28 declaration_specifiers: type_specifier •
   29                       | type_specifier • declaration_specifiers

    TYPEDEF   shift, and go to state 28
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    CHAR      [reduce using rule 28 (declaration_specifiers)]
    SHORT     [reduce using rule 28 (declaration_specifiers)]
    INT       [reduce using rule 28 (declaration_specifiers)]
    LONG      [reduce using rule 28 (declaration_specifiers)]
    SIGNED    [reduce using rule 28 (declaration_specifiers)]
    UNSIGNED  [reduce using rule 28 (declaration_specifiers)]
    FLOAT     [reduce using rule 28 (declaration_specifiers)]
    DOUBLE    [reduce using rule 28 (declaration_specifiers)]
    VOID      [reduce using rule 28 (declaration_specifiers)]
    $default  reduce using rule 28 (declaration_specifiers)

    declaration_specifiers  go to state 47
    type_specifier          go to state 23


State 24

    8 function_definition: enum_specifier • ';'

    ';'  shift, and go to state 48


State 25

   11 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 26
    '('         shift, and go to state 14

    direct_declarator  go to state 49


State 26

   13 direct_declarator: IDENTIFIER •

    $default  reduce using rule 13 (direct_declarator)


State 27

   27 declaration: IDENTIFIER declarator • ';'

    ';'  shift, and go to state 50


State 28

   30 declaration_specifiers: TYPEDEF •
   31                       | TYPEDEF • declaration_specifiers type_specifier

    TYPEDEF   shift, and go to state 28
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    CHAR      [reduce using rule 30 (declaration_specifiers)]
    SHORT     [reduce using rule 30 (declaration_specifiers)]
    INT       [reduce using rule 30 (declaration_specifiers)]
    LONG      [reduce using rule 30 (declaration_specifiers)]
    SIGNED    [reduce using rule 30 (declaration_specifiers)]
    UNSIGNED  [reduce using rule 30 (declaration_specifiers)]
    FLOAT     [reduce using rule 30 (declaration_specifiers)]
    DOUBLE    [reduce using rule 30 (declaration_specifiers)]
    VOID      [reduce using rule 30 (declaration_specifiers)]
    $default  reduce using rule 30 (declaration_specifiers)

    declaration_specifiers  go to state 51
    type_specifier          go to state 23


State 29

    9 function_definition: TYPEDEF declaration_specifiers • IDENTIFIER ';'
   31 declaration_specifiers: TYPEDEF declaration_specifiers • type_specifier

    IDENTIFIER  shift, and go to state 52
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11

    type_specifier  go to state 53


State 30

  166 type_specifier: CHAR '*' •

    $default  reduce using rule 166 (type_specifier)


State 31

  168 enum_specifier: ENUM IDENTIFIER • '{' enumerator_list '}'
  169               | ENUM IDENTIFIER •

    '{'  shift, and go to state 54

    $default  reduce using rule 169 (enum_specifier)


State 32

  167 enum_specifier: ENUM '{' • enumerator_list '}'

    IDENTIFIER  shift, and go to state 55

    enumerator_list  go to state 56
    enumerator       go to state 57


State 33

  174 type_qualifier: CONST •

    $default  reduce using rule 174 (type_qualifier)


State 34

  175 type_qualifier: VOLATILE •

    $default  reduce using rule 175 (type_qualifier)


State 35

  180 type_qualifier_list: type_qualifier •

    $default  reduce using rule 180 (type_qualifier_list)


State 36

  178 pointer: '*' pointer •

    $default  reduce using rule 178 (pointer)


State 37

  177 pointer: '*' type_qualifier_list •
  179        | '*' type_qualifier_list • pointer
  181 type_qualifier_list: type_qualifier_list • type_qualifier

    CONST     shift, and go to state 33
    VOLATILE  shift, and go to state 34
    '*'       shift, and go to state 13

    $default  reduce using rule 177 (pointer)

    type_qualifier  go to state 58
    pointer         go to state 59


State 38

   14 direct_declarator: '(' declarator • ')'

    ')'  shift, and go to state 60


State 39

    0 $accept: ROOT $end •

    $default  accept


State 40

    3 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 3 (translation_unit)


State 41

   16 direct_declarator: direct_declarator '(' • parameter_list ')'
   17                  | direct_declarator '(' • identifier_list ')'
   18                  | direct_declarator '(' • ')'

    IDENTIFIER  shift, and go to state 61
    TYPEDEF     shift, and go to state 28
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    ')'         shift, and go to state 62

    parameter_list          go to state 63
    parameter_declaration   go to state 64
    declaration_specifiers  go to state 65
    type_specifier          go to state 23
    identifier_list         go to state 66


State 42

   15 direct_declarator: direct_declarator '[' • constant_expression ']'

    IDENTIFIER    shift, and go to state 67
    INT_LITERAL   shift, and go to state 68
    CHAR_LITERAL  shift, and go to state 69
    SIZEOF        shift, and go to state 70
    INCREMENT_OP  shift, and go to state 71
    DECREMENT_OP  shift, and go to state 72
    '+'           shift, and go to state 73
    '-'           shift, and go to state 74
    '*'           shift, and go to state 75
    '('           shift, and go to state 76
    '!'           shift, and go to state 77
    '~'           shift, and go to state 78
    '&'           shift, and go to state 79

    constant_expression        go to state 80
    primary_expression         go to state 81
    postfix_expression         go to state 82
    unary_expression           go to state 83
    unary_operator             go to state 84
    cast_expression            go to state 85
    multiplicative_expression  go to state 86
    additive_expression        go to state 87
    shift_expression           go to state 88
    relational_expression      go to state 89
    equality_expression        go to state 90
    and_expression             go to state 91
    exclusive_or_expression    go to state 92
    inclusive_or_expression    go to state 93
    logical_and_expression     go to state 94
    logical_or_expression      go to state 95
    conditional_expression     go to state 96


State 43

   25 declaration: declaration_specifiers ';' •

    $default  reduce using rule 25 (declaration)


State 44

    6 function_definition: declaration_specifiers declarator • compound_statement
    7                    | declaration_specifiers declarator • ';'
   32 init_declarator: declarator •
   33                | declarator • '=' initializer

    ';'  shift, and go to state 97
    '='  shift, and go to state 98
    '{'  shift, and go to state 99

    ';'  [reduce using rule 32 (init_declarator)]

    compound_statement  go to state 100


State 45

   12 declarator: direct_declarator •
   15 direct_declarator: direct_declarator • '[' constant_expression ']'
   16                  | direct_declarator • '(' parameter_list ')'
   17                  | direct_declarator • '(' identifier_list ')'
   18                  | direct_declarator • '(' ')'
   34 init_declarator: direct_declarator • '[' ']' '=' '{' initializer_list '}'
   35                | direct_declarator • '[' ']' '=' '{' initializer_list ',' '}'

    '('  shift, and go to state 41
    '['  shift, and go to state 101

    $default  reduce using rule 12 (declarator)


State 46

   26 declaration: declaration_specifiers init_declarator • ';'

    ';'  shift, and go to state 102


State 47

   29 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 29 (declaration_specifiers)


State 48

    8 function_definition: enum_specifier ';' •

    $default  reduce using rule 8 (function_definition)


State 49

   11 declarator: pointer direct_declarator •
   15 direct_declarator: direct_declarator • '[' constant_expression ']'
   16                  | direct_declarator • '(' parameter_list ')'
   17                  | direct_declarator • '(' identifier_list ')'
   18                  | direct_declarator • '(' ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    '('       [reduce using rule 11 (declarator)]
    $default  reduce using rule 11 (declarator)


State 50

   27 declaration: IDENTIFIER declarator ';' •

    $default  reduce using rule 27 (declaration)


State 51

   31 declaration_specifiers: TYPEDEF declaration_specifiers • type_specifier

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    type_specifier  go to state 53


State 52

    9 function_definition: TYPEDEF declaration_specifiers IDENTIFIER • ';'

    ';'  shift, and go to state 103


State 53

   31 declaration_specifiers: TYPEDEF declaration_specifiers type_specifier •

    $default  reduce using rule 31 (declaration_specifiers)


State 54

  168 enum_specifier: ENUM IDENTIFIER '{' • enumerator_list '}'

    IDENTIFIER  shift, and go to state 55

    enumerator_list  go to state 104
    enumerator       go to state 57


State 55

  172 enumerator: IDENTIFIER •
  173           | IDENTIFIER • '=' constant_expression

    '='  shift, and go to state 105

    $default  reduce using rule 172 (enumerator)


State 56

  167 enum_specifier: ENUM '{' enumerator_list • '}'
  171 enumerator_list: enumerator_list • ',' enumerator

    ','  shift, and go to state 106
    '}'  shift, and go to state 107


State 57

  170 enumerator_list: enumerator •

    $default  reduce using rule 170 (enumerator_list)


State 58

  181 type_qualifier_list: type_qualifier_list type_qualifier •

    $default  reduce using rule 181 (type_qualifier_list)

